resources/css/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
    font-family: 'Radikal';
    src: url('/public/fonts/Nootype - Radikal.otf') format('opentype');
    font-weight: 400; /* Normaal gewicht */
    font-style: normal;
}

@font-face {
    font-family: 'Radikal';
    src: url('/public/fonts/Nootype - Radikal Bold.otf') format('opentype');
    font-weight: 700; /* Bold */
    font-style: normal;
}

@font-face {
    font-family: 'Radikal';
    src: url('/public/fonts/Nootype - Radikal Light.otf') format('opentype');
    font-weight: 300; /* Light */
    font-style: normal;
}


body{
    @apply font-radikal sm:max-w-full

}
* {
   @apply overflow-x-hidden
}

body p {
    @apply  text-moss-dark sm:text-sm
}

h1 {
    @apply text-4xl font-bold  text-[#2E342A] text-center pt-[2vw]
}

/* app.css */
.button-small {
    @apply inline-block px-6 py-3 bg-violet-light text-white rounded-lg text-sm hover:bg-violet-dark;
}
/* app.css */
.nav-link-header {
    @apply inline-flex items-center justify-center bg-cream m-[1.6vw];
    @apply text-center transition-all duration-300 tracking-normal hover:tracking-widest;
    width: 5vw;
}

.nav-link-footer {
    @apply inline-flex items-center justify-center bg-moss-dark  m-[0.2vw];
    @apply text-center transition-all duration-300 tracking-normal hover:tracking-widest;
    width: 12vw;
}

.h3-footer {
    @apply font-bold text-lg text-yellow
}




.header {
    @apply flex justify-between items-center pr-[5vw] pl-[5vw] bg-cream ;
}


.footer-content {
    @apply flex justify-center items-center gap-[5vw] p-[2vw] h-full   ;
}



.footer-links {
    @apply flex flex-col items-center gap-[0.5vw] text-white;
}


.footer-div {
    @apply footer-links flex flex-col items-center
}
.footer {
    @apply rounded-t-3xl ;
}



.nav-bar {
    @apply flex justify-end bg-cream ;
}


/* Dropdown container */
.navbar-dropdown {
    @apply relative; /* Dit zorgt ervoor dat de dropdown zichtbaar wordt binnen de navbar */
}

/* Dropdown menu, standaard verborgen */
.dropdown-content {
    @apply bg-moss-dark fixed left-0  w-screen  z-10 text-white   top-[5vw] rounded-lg hidden  ;

}

.dropdown-content a {
   @apply ml-[10vw] mr-[10vw] p-[0.5vw] w-[10vw]
}

/* Links sectie */
.dropdown-links {
    @apply flex flex-col items-center;
}

/* Knoppen sectie (rechts uitgelijnd) */
.dropdown-buttons {
    @apply flex flex-col items-center justify-start text-center;
}

/* Dropdown verschijnt bij hover */
.navbar-dropdown:hover .dropdown-content  {
    @apply flex justify-between p-[1vw];
}


.nav-bar:hover {
    display: block;
}

/* Stijlen voor het hamburger menu (de drie strepen) */
.menu-icon span {
    @apply block w-10 h-[0.3vw] bg-moss-dark m-1.5;
}

.menu-icon {
    @apply p-[1.25vw];
}

@media (max-width: 768px) {
    body p{
        font-size: 0.8rem !important; /* Zorg dat dit altijd wordt toegepast */
    }
    h1 {
        font-size: 1.5rem !important;
    }
    h2, h3 {
        font-size: 1.2rem !important;
    }



}

